# django-admin-style

./: .gitignore  CONTRIBUTING.rst  Gruntfile.js  LICENSE  MANIFEST.in  README.md  README.rst  package-lock.json  package.json  setup.cfg
.github/ISSUE_TEMPLATE/: -ask--question-template.md  -bug--bug-report.md  -doc--document-template.md  -feat--feature-request.md
requirements/: base.txt  dev.txt
src/django_admin_style/static/css/: _variables.css  base.css  change_form.css  change_list.css  dashboard.css  filter.css  forms.css  nav_sidebar.css  responsive.css
src/django_admin_style/static/django_admin_style/css/: style.min.css
src/django_admin_style/templates/admin/: actions.html  app_list.html  base.html  base_site.html  change_list.html  change_list_object_tools.html  index.html  search_form.html
